# LLM-Browser-Agent

./: .gitignore  README.en.md  README.md  agent.py  agent_core.py  agent_ollama.py  browser.py  browser_playwright.py  engine_common.py  mcp_server.py  pad_webdriver_ref.py  pyproject.toml  recorder_import.py  run_batch.py  run_recording.py  tools.py
.github/workflows/: ci.yml
data/: edi2_practice_batch.csv  edi_practice_batch.csv
docs/: PAD_WebDriver.md
recordings/: edi2_practice_batch.json  edi_practice_batch.json  edi_practice_named.json
test_site/: index.html  selftest.py
test_site/edi2/: index.html
tests/: test_pad_webdriver.py  test_units.py
